Change logo and fix spacing

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Oxygen|Lobster|Maven+Pro|Questrial|Poppins|Didact+Gothic|Marmelad|Overlock);
+@import url(https://fonts.googleapis.com/css?family=Oxygen|Lobster|Maven+Pro|Questrial|Poppins|Didact+Gothic|Marmelad|Overlock|Lily+Script+One);
 
 body {
     font-family: 'Oxygen', sans-serif;
@@ -53,9 +53,13 @@ h4 {
   margin: 7px;
 }
 
+
 .logo {
-    color: #01BBCC;
-    font-size: 50px;
+  color: #01BBCC;
+  font-size: 50px;
+  margin: 10px;
+  font-family: 'Lily Script One', sans-serif;
+  letter-spacing: 1px;
 }
 
 .navbar {
@@ -171,7 +175,6 @@ mark {
 .terms-box {
   height: 650px;
 }
-
 
 /*
 body::after, body::before {
